===================
v 6-0.7

- Optimized variable address resolution, making calls to built-in functions O(1) speed.


===================
v 6-0.65

- Added support for tokens of binary digits. Currently converted to string.
- Changed language version to 3.6


===================
v 6-0.642

- Added are_available() Copper function.
- Changed language version to 3.4, then 3.5
- Fixed bug in CharList::append(const CharList&) which failed to account for size of 1.
- Added TT_end_main handling.
- Added OS_Unknown
- Fixed typo in IntegerObject::subtract that caused on error when bounds checks were enabled.
- Fixed process_sys_num_chain_num(). Now returns first value when only one number given.
- Removed TT_function_end_run, which did nothing.


===================
v 6-0.641

- Added String::fromInt() and String::fromDouble().
- Changed CU_STACK_FRAME_SCOPE_SIZE from 100 to 50.
- Changed Engine::resolveTokenType() to have nameFilter override isValidCharacter() precedence. Allows Unicode.

docs
- Fixed typo.

CuAccessHelper.h
- Created and syntax errors fixed
- Added getMemberAsBool()


===================
2019/12/30 - 2020/1/5
v 6-0.64

- Added ret_type() Copper function:
-- SystemFunction::_function_return_type
-- Engine::process_sys_function_return_type()
- Added "realize" for creating instances of objects from type-values
-- SystemFunction::_construct_from_type
-- EngineMessage::CouldNotConstructRequestedType
-- Engine::process_sys_construct_from_type()
- Added "new" for creating instances of objects from string names
-- SystemFunction::_construct_from_name
-- EngineMessage::process_sys_construct_from_name()
- Added new warning EngineMessage, CouldNotConstructRequestedType.
- Added and integrated usage of CustomObjectFactory (for users to create their own objects via construct_from_type and construct_from_name).
- Bumped up the language version to 3.3.