@@ -35,10 +35,12 @@ void handler(int sig) {
   exit(1);
 }
 
+/*
 bool NameFilter(const util::String& pName) {
 	// Empty. Could be used to check for valid Unicode, e.g. utf-8.
 	return true;
 }
+*/
 
 int main() {
 	Cu::Engine engine;
@@ -49,7 +51,7 @@ int main() {
 	engine.setStackTracePrintingEnabled(true);
 	engine.setPrintTokensWhenParsing(true);
 
-	engine.setNameFilter(&NameFilter); // optional
+	//engine.setNameFilter(&NameFilter); // optional
 
 	Cu::Numeric::addFunctionsToEngine(engine);
 	Cu::Time::addFunctionsToEngine(engine);
